--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             text-align: center;
         }
         ol {
+            padding: 0px;
             font-size: 1.4em;
             line-height: 2.0em;
             list-style-position: inside;
@@ -22,6 +23,7 @@
             border-radius: 8px;
         }
         .content {
+            padding: 0px;
             display: none;
         }
     </style>
