--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         }
         ol {
             padding: 0px;
+            list-style-position: inside;
         }
         section {
             margin: 10px;
